2004-05-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Updated babelfish web scraping for translate menu.

2004-05-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl (::tkchat::msgSend): convert msg to utf-8 if necessary

2004-05-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fixed bug #955473 erroneous winico requirement

2004-05-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added /wiki command for Colin (the lazybones).

2004-05-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:  Cleanup the taskbar icon on application exit.

2004-04-29  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Support 'tile' themeing now. There are a couple of
	places (font and color dialogs) that have compatability
	workarounds that might be removed in the future. Requires tile0.4+
	
	* tkchat.tcl: Provide activity indicators by editing the title
	when the window isn't focused and with winico support for windows.
	* tkchat.ico: Icons for use with windows.

2003-02-09  Pascal Scheffers  <pascal@scheffers.net>
	* tkchat.tcl: Updated the way messages from ircbridge and ijchain
	are handled. The new code path rewrites the messages before the
	messages are is set to 'normal' so you can just call addAction and
	return. 

2004-03-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Add ijbridge as a synonym for ijchain to trap
	messages from the Jabber - IRC bridge and tidy them up.

	* tkchat.tcl: Don't list the IRC users in the menubutton list. If
	we ever fix it such that we can /msg to IRC then this can be
	enabled but at the moment it's just noise.

2004-03-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Removed the now redundant code using a NETSCAPE
	environment variable. We have a dialog to set this now.

2004-03-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added support for the ActiveState Tk style package